[package]
name = "p7certsign"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha256 = "1.1.2"
walkdir = "2.3.3"

[dependencies.zip]
version = "0.6.4"
features = ["deflate"]
default-features = false

[dependencies.windows]
version = "0.48.0"
features = [
    "Win32_Foundation",
    "Win32_Security",
    #"Win32_System_Threading",
    "Win32_System_Memory",
    #"Win32_System_IO",
    #"Win32_UI_WindowsAndMessaging",
    "Win32_Security_Cryptography",
    "Win32_Security_Cryptography_UI",
    #"Win32_Storage_FileSystem",
    "Win32_System_LibraryLoader",
]

[profile.release]
opt-level = 'z'     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Reduce number of codegen units to increase optimizations
panic = 'abort'     # Abort on panic
strip = true        # Strip symbols from binary
